<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ckc.record.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/record_state"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Record state" />

        <TextView
            android:id="@+id/db"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:text="@string/dB" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/dB"/>

            <EditText
                android:id="@+id/db_value"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_shreshold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/phoneNo"/>

            <EditText
                android:id="@+id/phone_input"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="100dp"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/message_mother"
                    android:text="@string/mes"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/call_mother"
                    android:text="@string/call"/>
            </RadioGroup>

            <Button
                android:id="@+id/record_press_release"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#e509b714"
                android:text="123..." />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
